# FIAP---Tech-Challenge-Fase-1---Vitivinicultura-Embrapa-API

./: .env  .gitignore  README.md  data.csv  docker-compose.yaml
backend/: .env  README.md  dockerfile  pyproject.toml
backend/src/: data.csv  main.py
backend/src/core/: logger_config.py  settings.py
backend/src/domain/auth/: routes.py  use_cases.py
backend/src/domain/external_api/: routes.py  use_cases.py
backend/src/domain/user/: routes.py  schemas.py  use_cases.py
backend/src/infra/db/: database.py  initialize.py  models.py
backend/src/utils/: auth.py
